@@ -99,6 +99,7 @@ public class FormDataPurchase {
   private final LiveData<String> storeNameLive;
   private final MutableLiveData<Location> locationLive;
   private final LiveData<String> locationNameLive;
+  private final MutableLiveData<Integer> printLabelTypeLive;
   private final MutableLiveData<String> noteLive;
   private final PluralUtil pluralUtil;
   private boolean currentProductFlowInterrupted = false;
@@ -274,6 +275,7 @@ public class FormDataPurchase {
         locationLive,
         location -> location != null ? location.getName() : null
     );
+    printLabelTypeLive = new MutableLiveData<>(0);
     noteLive = new MutableLiveData<>();
     pluralUtil = new PluralUtil(application);
   }
@@ -651,6 +653,14 @@ public class FormDataPurchase {
     return locationNameLive;
   }
 
+  public MutableLiveData<Integer> getPrintLabelTypeLive() {
+    return printLabelTypeLive;
+  }
+
+  public void setPrintLabelTypeLive(int type) {
+    printLabelTypeLive.setValue(type);
+  }
+
   public MutableLiveData<String> getNoteLive() {
     return noteLive;
   }
@@ -871,6 +881,9 @@ public class FormDataPurchase {
       if (isFeatureEnabled(Constants.PREF.FEATURE_STOCK_LOCATION_TRACKING) && location != null) {
         json.put("location_id", String.valueOf(location.getId()));
       }
+      if (isFeatureEnabled(PREF.FEATURE_LABEL_PRINTER)) {
+        json.put("stock_label_type", String.valueOf(printLabelTypeLive.getValue()));
+      }
       if (noteLive.getValue() != null && !noteLive.getValue().isEmpty()) {
         json.put("note", noteLive.getValue());
       }
@@ -971,6 +984,7 @@ public class FormDataPurchase {
     storeLive.setValue(null);
     showStoreSection.setValue(true);
     locationLive.setValue(null);
+    printLabelTypeLive.setValue(0);
     noteLive.setValue(null);
     new Handler().postDelayed(() -> {
       productNameErrorLive.setValue(null);
