@@ -1,0 +1,6 @@
+<vector android:height="24dp" android:tint="#000000"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000" android:pathData="M18,7V4c0,-0.55 -0.45,-1 -1,-1H7C6.45,3 6,3.45 6,4v3H18z"/>
+    <path android:fillColor="#000000" android:pathData="M19,8H5c-1.66,0 -3,1.34 -3,3v5c0,0.55 0.45,1 1,1h3v2c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2v-2h3c0.55,0 1,-0.45 1,-1v-5C22,9.34 20.66,8 19,8zM16,19H8v-4h8V19zM18,12.5c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S18.55,12.5 18,12.5z"/>
+</vector>
